# deployer-rs

./: .gitignore  Cargo.toml  README.md  git.sh  test.sh
app/: Cargo.toml
app/src/: app.rs  cmd.rs  docker.rs  java_service.rs  lib.rs  pool.rs  remote.rs  service.rs
cli/: Cargo.toml
cli/examples/: a.rs  cmd1.rs  up.rs
cli/src/: app_impl.rs  cmd.rs  config.rs  main.rs  remote.rs  remote_impl.rs  task_impl.rs  upload.rs
cli/src/config/: app.rs  mod.rs  remote.rs  task.rs  yaml.rs  yaml_impl.rs
cli/src/service/: mod.rs  remote.rs  task.rs
logs/: Cargo.toml
logs/src/: lib.rs
logs/src/config/: log.rs  mod.rs  yaml.rs
server/: Cargo.toml
server/src/: app.rs  cmd.rs  config.rs  git.rs  log.rs  loging.rs  main.rs  upload.rs
service/: Cargo.toml
service/src/: lib.rs  linux.rs
