[package]
name = "micro_app"
version = "0.1.0"
authors = ["shaipe <shaipe@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0.120", features=["derive"]}
serde_json = "1.0.61"
tube={version="0.1.0", path="../../tube"}
tube_error = {version="0.1.0", path="../../tube/error"}
tube_cmd = {version="0.1.0", path="../../tube/cmd"}

[features]
default=["java"]
java=[]