[package]
name = "micro_app"
version = "0.1.0"
authors = ["shaipe <shaipe@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
tube_error = {version="0.1.0", path="../../tube/error"}
tube = {version="0.1.0", path="../../tube", features=["cmd"]}

[features]
default=["java"]
java=[]
