[package]
name = "cli"
version = "0.1.0"
authors = ["shaipe <shaipe@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4.4"
clap = "3.0.0-beta.2"
serde = "1.0.112"
serde_derive = "1.0.112"
serde_json = "1.0.55"
reqwest = {version="0.10.10", features=["blocking"]}
tube_error = {version="0.1.0", path="../../tube/error"}

[[bin]]
name = "dcli"
path = "./src/main.rs"
