[package]
name = "cli"
version = "0.1.0"
authors = ["shaipe <shaipe@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4.5"
clap = "2.33.3"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.63"
reqwest = { version = "0.11.1", features = ["blocking", "multipart", "json"] }
tube_error = {version="0.1.0", path="../../tube/error"}
tube_cmd = {version="0.1.0", path="../../tube/cmd"}
micro_app = {version="0.1.0", path="../app"}

[[bin]]
name = "dcli"
path = "./src/main.rs"
