[package]
name = "logs"
version = "0.1.0"
authors = ["shaipe <shaipe@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4.5"
tube = {version="0.1.0", path="../../tube"}
lazy_static = "1.4.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
