[package]
name = "server"
version = "0.1.0"
authors = ["shaipe <shaipe@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.3.0"
actix-web = "3.3.2"
futures = "0.3.12"
bytes = "1.0.1"
clap = "2.33.3"
serde = {version="1.0.120", features=["derive"]}
serde_json = "1.0.61"
sanitize-filename = "0.3.0"
yaml-rust = "0.4.5"
oss = {version="0.1.0", path="../../oss"}
tube={version="0.1.0", path="../../tube"}
tube_error = {version="0.1.0", path="../../tube/error"}
tube_value = { version = "0.1.0", path = "../../tube/value"}
tube_cmd = {version="0.1.0", path="../../tube/cmd"}
tube_web = { version="0.1.0", path="../../tube/web"}
deployer_service = { version="0.1.0", path="../service"}
lazy_static = "1.4.0"
micro_app = {version="0.1.0", path="../app"}



[[bin]]
name = "dserver"
path = "./src/main.rs"
