[package]
name = "server"
version = "0.1.0"
authors = ["shaipe <shaipe@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.3.0"
actix-web = "3.3.2"
actix-cors = "0.5.4"
futures = "0.3.15"
bytes = "1.0.1"
clap = "2.33.3"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
# sanitize-filename = "0.3.0"
yaml-rust = "0.4.5"
oss = {version="0.1.0", path="../../oss"}
tube={version="0.1.0", path="../../tube", features=["cmd", "git"]}
tube_error = {version="0.1.0", path="../../tube/error"}
tube_value = { version = "0.1.0", path = "../../tube/value"}
tube_web = { version="0.1.0", path="../../tube/web"}
lazy_static = "1.4.0"
micro_app = {version="0.1.0", path="../app"}
log4rs = "1.0.0"
log = "0.4.14"
logs = {version="0.1.0", path="../logs"}


[[bin]]
name = "dserver"
path = "./src/main.rs"
